fixed web scrollbar

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -26,3 +26,7 @@ a {
 input:focus{
   outline: none;
 }
+
+::-webkit-scrollbar {
+  width: 0;
+}
